Tag ID 추가, 빌드 그래들 수정 컨트롤러 매핑 수정

--- a/src/main/resources/templates/html/Email-Token.html
+++ b/src/main/resources/templates/html/Email-Token.html
@@ -56,12 +56,12 @@
                                                 <span class="input-group-text"><span
                                                         class="fas fa-unlock-alt"></span></span>
                                             </div>
-                                            <input class="form-control" id="email_Token" placeholder="Email Token"
+                                            <input class="form-control" id="email-token" placeholder="Email Token"
                                                 type="email_Token" aria-label="email_Token" required>
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-block btn-primary">Authenricate</button>
+                                <button type="submit" id="token-btn" class="btn btn-block btn-primary">Authenricate</button>
                             </form>
                         </div>
                     </div>
