--- a/src/main/resources/templates/html/classroom.html
+++ b/src/main/resources/templates/html/classroom.html
@@ -36,8 +36,8 @@
       box-sizing: border-box;
       background-color: #f5f9fe;">
         <div style="width: 100%;">
-            <a class="navbar-brand mr-lg-3" href="/main">
-                <img class="navbar-brand-dark" style="margin-left: 30px; width: 170px;"
+            <a class="navbar-brand mr-lg-3" id="logo-main" href="/main" >
+                <img class="navbar-brand-dark"  style="margin-left: 30px; width: 170px; cursor:pointer;"
                      src="/assets/img/Logo_black.png"
                      alt="menuimage">
             </a>
@@ -48,7 +48,7 @@
             <span id="minutes"></span>
             <span id="seconds"></span>
           </div>
-          <a href="sign-in.html"><button type="button" id="classroom-out" class="btn btn-secondary m-0"
+          <a href="/mypage"><button type="button" id="classroom-out" class="btn btn-secondary m-0"
                                          style="background-color: #C33C54; border : none;">수업나가기</button></a>
         </span>
         </div>
