--- a/src/main/resources/templates/html/evaluate-popup.html
+++ b/src/main/resources/templates/html/evaluate-popup.html
@@ -76,7 +76,7 @@
                 <div class="modal-body mb-5" style="text-align: center;">
                         <span>
                             <span class="mr-2">
-                                <button style="height: 100px; width: 100px;"
+                                <button style="height: 100px; width: 100px;" id="like-btn"
                                         class="btn mb-2 mr-2 btn-icon-only rounded-circle btn-primary" type="button">
                                     <span class="btn-inner-icon">
                                         <i class="fa-regular fa-thumbs-up fa-2xl"
@@ -85,7 +85,7 @@
                                 </button>
                             </span>
                             <span class="ml-2">
-                                <button style="height: 100px; width: 100px;"
+                                <button style="height: 100px; width: 100px;" id="dislike-btn"
                                         class="btn mb-2 mr-2 btn-icon-only rounded-circle btn-primary" type="button">
                                     <span class="btn-inner-icon">
                                         <i class="fa-regular fa-thumbs-up fa-rotate-180 fa-2xl"
