--- a/src/main/resources/templates/html/password-change.html
+++ b/src/main/resources/templates/html/password-change.html
@@ -71,7 +71,7 @@
                   <!-- End of Form -->
                   <!-- Form -->
                   <div class="form-group">
-                    <label for="password_confirm">Confirm Password
+                    <label for="password-confirm">Confirm Password
                       <span class="txt-error password_confirm"
                         style="padding-left: 10px; font-size: 13px">
                       </span>
@@ -83,11 +83,11 @@
                           </span>
                         </span>
                       </div>
-                      <input class="form-control" id="password_confirm" placeholder="Confirm password" type="password"
+                      <input class="form-control" id="password-confirm" placeholder="Confirm password" type="password"
                         aria-label="Password" required />
                     </div>
                   </div>
-                  <button type="submit" class="btn btn-block btn-primary" id="createAccount">
+                  <button type="submit" class="btn btn-block btn-primary" id="change-password">
                     Change password
                   </button>
                 </div>
