--- a/src/main/resources/templates/html/main.html
+++ b/src/main/resources/templates/html/main.html
@@ -14,24 +14,6 @@
         content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme" />
     <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://demo.themesberg.com/pixel-pro">
-    <meta property="og:title" content="Spaces - Directory Listing Landing page 3">
-    <meta property="og:description"
-        content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg.">
-    <meta property="og:image"
-        content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://demo.themesberg.com/pixel-pro">
-    <meta property="twitter:title" content="Spaces - Directory Listing Landing page 3">
-    <meta property="twitter:description"
-        content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg.">
-    <meta property="twitter:image"
-        content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg">
-
     <!-- Fontawesome -->
     <link type="text/css" href="/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"
@@ -70,9 +52,8 @@
 
                     </a>
                     <div>
-                        <button class="btn mb-2 mr-2 btn-white" type="button">MY PAGE</button>
-                        <a href="sign-in.html"><button class="btn mb-2 mr-2 btn-secondary" type="button">SIGN
-                                IN</button></a>
+                        <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button></a>
+                        <a href="#"><button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN IN</button></a>
                     </div>
                 </div>
             </nav>
@@ -89,7 +70,7 @@
                                         <div class="col-12 col-lg-4 pr-lg-1">
                                             <div class="form-group form-group-lg mb-lg-0">
                                                 <div class="input-group">
-                                                    <input id="search-activity" type="text"
+                                                    <input id="search-name" type="text"
                                                         class="form-control autocomplete" placeholder="튜터의 이름을 입력해주세요"
                                                         required>
                                                 </div>
@@ -98,7 +79,7 @@
                                         <div class="col-12 col-lg-4 pr-lg-1">
                                             <div class="form-group form-group-lg mb-lg-0">
                                                 <div class="input-group">
-                                                    <select class="form-control" id="firstInterestSelect" required>
+                                                    <select class="form-control" id="search-interest" required>
                                                         <option value="" disabled selected style="display:none">관심사
                                                         </option>
                                                         <option value="politics">정치</option>
@@ -116,13 +97,14 @@
                                                     <span class="input-group-text"><span
                                                             class="far fa-calendar-alt"></span></span>
                                                 </div>
-                                                <input class="form-control datepicker" placeholder="예약 날짜" type="text"
+                                                <input class="form-control datepicker" id="reservate-date"
+                                                       placeholder="예약 날짜" type="text"
                                                     required>
                                             </div>
                                         </div>
                                         <div class="col-12 col-lg-1 pl-lg-1">
                                             <button class="btn btn-lg btn-dark btn-block" type="submit"><span
-                                                    class="icon icon-sm"><span
+                                                    class="icon icon-sm" id="search-btn"><span
                                                         class="fas fa-search-location"></span></span></button>
                                         </div>
                                     </form>
@@ -141,7 +123,7 @@
                         <h3 class="h4 mb-5">가장 잘 맞는 튜터를 찾아보세요.</h3>
                     </div>
                     <div class="col d-flex justify-content-end">
-                        <a href="all-spaces.html">모든 튜터 보기 <span class="icon icon-xs"><span
+                        <a href="/main/search-all">모든 튜터 보기 <span class="icon icon-xs"><span
                                     class="fas fa-chevron-right ml-2"></span></span></a>
                     </div>
                 </div>
@@ -151,67 +133,31 @@
                             <div class="row no-gutters align-items-center">
                                 <div class="col-12 col-lg-6 col-xl-4">
                                     <a href="#">
-                                        <img src="/assets/img/YeonuLEE.jpg" alt="loft space"
-                                             class="card-img p-2 rounded-xl">
+                                        <img src="" alt="loft space"
+                                             class="card-img p-2 rounded-xl" id="tutor-photo">
                                     </a>
                                 </div>
                                 <div class="col-12 col-lg-6 col-xl-7">
                                     <div class="card-body">
                                         <div class="mb-3">
                                             <a href="#">
-                                                <span class="h5 mb-3 mr-6">Yeonu LEE</span>
+                                                <span class="h5 mb-3 mr-6" id="tutor-name"></span>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                                     fill="#dc143c" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                                     <path fill-rule="evenodd"
                                                         d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
                                                 </svg>
-                                                <span class="h6 mb-3">111+</span>
+                                                <span class="h6 mb-3" id="tutor-like"></span>
                                             </a>
                                         </div>
                                         <div class="mb-5">
                                             <span class="fas fa-map-marker-alt"></span>
-                                            <span>North America</span>
+                                            <span id="tutor-nation"></span>
                                         </div>
                                         <div class="d-flex my-3">
-                                            <span class="badge badge-pill badge-primary ml-2">#IT</span>
-                                            <span class="badge badge-pill badge-primary ml-2">#Photo</span>
+                                            <span class="badge badge-pill badge-primary ml-2" id="first-interest"></span>
+                                            <span class="badge badge-pill badge-primary ml-2" id="second-interest"></span>
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 mb-3">
-                        <div class="card border-light mb-4 animate-up-5">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col-12 col-lg-6 col-xl-4">
-                                    <a href="./single-space.html">
-                                        <img src="/assets/img/YeonuLEE.jpg" alt="loft space"
-                                             class="card-img p-2 rounded-xl">
-                                    </a>
-                                </div>
-                                <div class="col-12 col-lg-6 col-xl-7">
-                                    <div class="card-body">
-                                        <div class="mb-3">
-                                            <a href="#">
-                                                <span class="h5 mb-3 mr-6">Yeonu LEE</span>
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                                                    fill="#dc143c" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                                    <path fill-rule="evenodd"
-                                                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
-                                                </svg>
-                                                <span class="h6 mb-3">111+</span>
-                                            </a>
-                                        </div>
-                                        <div class="mb-5">
-                                            <span class="fas fa-map-marker-alt"></span>
-                                            <span>North America</span>
-                                        </div>
-                                        <div class="d-flex my-3">
-                                            <span class="badge badge-pill badge-primary ml-2">#IT</span>
-                                            <span class="badge badge-pill badge-primary ml-2">#Photo</span>
-                                        </div>
-
                                     </div>
                                 </div>
                             </div>
