--- a/src/main/resources/templates/html/sign-up-success.html
+++ b/src/main/resources/templates/html/sign-up-success.html
@@ -4,36 +4,36 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- Primary Meta Tags -->
-  <title>TOPICSATION - Email</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="title" content="Spaces - Sign up" />
-  <meta name="author" content="Themesberg" />
+  <title>Sign up - Success</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="title" content="Spaces - Directory Listing Landing page 3">
+  <meta name="author" content="Themesberg">
   <meta name="description"
-    content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg." />
+        content="Premium Directory Listing Bootstrap 4 Template featuring 37 hand-crafted pages, a dashboard an Mapbox integration. Spaces also comes with a complete UI Kit featuring over 700 components by Themesberg.">
   <meta name="keywords"
-    content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme" />
-  <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg" />
+        content="bootstrap, bootstrap 4 template, directory listing bootstrap, bootstrap 4 listing, bootstrap listing, bootstrap 4 directory listing template, vector map, leaflet js template, mapbox theme, mapbox template, dashboard, themesberg, user dashboard bootstrap, dashboard bootstrap, ui kit, bootstrap ui kit, premium bootstrap theme" />
+  <link rel="canonical" href="https://themesberg.s3.us-east-2.amazonaws.com/public/products/spaces/thumbnail.jpg">
 
   <!-- Fontawesome -->
-  <link type="text/css" href="/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
+  <link type="text/css" href="/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"
           integrity="sha512-Cvxz1E4gCrYKQfz6Ne+VoDiiLrbFBvc6BPh4iyKo2/ICdIodfgc5Q9cBjRivfQNUXBCEnQWcEInSXsvlNHY/ZQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <!-- Leaflet JS -->
-  <link type="text/css" href="/vendor/leaflet/dist/leaflet.css" rel="stylesheet" />
+  <link type="text/css" href="/vendor/leaflet/dist/leaflet.css" rel="stylesheet">
 
   <!-- Fancybox -->
-  <link rel="stylesheet" href="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.css" />
+  <link rel="stylesheet" href="/vendor/@fancyapps/fancybox/dist/jquery.fancybox.min.css">
 
   <!-- VectorMap -->
-  <link rel="stylesheet" href="/vendor/jqvmap/dist/jqvmap.min.css" />
+  <link rel="stylesheet" href="/vendor/jqvmap/dist/jqvmap.min.css">
 
   <!-- Main CSS -->
-  <link type="text/css" href="/css/spaces.css" rel="stylesheet" />
+  <link type="text/css" href="/css/spaces.css" rel="stylesheet">
 
   <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-    crossorigin="anonymous"></script>
+
 </head>
 
 <body>
