inner class에 @RequestMapping 추가

--- a/src/main/resources/templates/html/main-search.html
+++ b/src/main/resources/templates/html/main-search.html
@@ -279,6 +279,27 @@
 
     <!-- Spaces custom Javascript -->
     <script src="/js/spaces.js"></script>
+
+    <!-- Ajax get data -->
+<!--    <script>-->
+<!--        var-->
+
+<!--        $(document).ready(function() {-->
+<!--            $.ajax({-->
+<!--                type: "GET",-->
+<!--                url: "/search-all.get",-->
+<!--                success: function(data, status) {-->
+<!--                    // 동적 데이터를 사용하여 화면에 업데이트-->
+<!--                    $("#my-data").text(data.name);-->
+<!--                },-->
+<!--                error: function (data, textStatus) {-->
+<!--                    alert("Error!")-->
+<!--                },-->
+<!--                complete: function (data, textStatus) {-->
+<!--                },-->
+<!--            });-->
+<!--        });-->
+<!--    </script>-->
 </body>
 
 </html>
