<a> 태그 href 추가 및 페이지 이동 처리

--- a/src/main/resources/templates/html/password-find.html
+++ b/src/main/resources/templates/html/password-find.html
@@ -77,7 +77,7 @@
                   <div class="d-block d-sm-flex justify-content-center align-items-center mt-4">
                     <span class="font-weight-normal">
                       Go back to the
-                      <a href="sign-in.html" class="font-weight-bold">login page</a>
+                      <a href="/members/signin" class="font-weight-bold">login page</a>
                     </span>
                   </div>
                 </div>
