--- a/src/main/resources/templates/html/sign-in.html
+++ b/src/main/resources/templates/html/sign-in.html
@@ -78,7 +78,7 @@
                   <!-- End of Form -->
                   <div id="lostpassword" style="text-align: right">
                     <div> <!--/members/signin/find -->
-                      <a href="password-find.html" class="small text-right">Lost password?</a>
+                      <a href="/members/signin/find" class="small text-right">Lost password?</a>
                     </div>
                   </div>
                 </div>
@@ -94,9 +94,9 @@
               <div class="d-block d-sm-flex justify-content-center align-items-center mt-4">
                 <span class="font-weight-normal">
                   <!--/members/signup/tutors -->
-                  <a href="sign-up-tutor.html" style="color: #c33c54; font-weight: 500">TUTOR?</a>
+                  <a href="/members/signup-tutors" style="color: #c33c54; font-weight: 500">TUTOR?</a>
                   or
-                  <a href="sign-up-tutee.html" style="color: #c33c54; font-weight: 500">TUTEE?</a>
+                  <a href="/members/signup-tutees" style="color: #c33c54; font-weight: 500">TUTEE?</a>
                 </span>
               </div>
             </div>
