--- a/src/main/resources/templates/html/main-search.html
+++ b/src/main/resources/templates/html/main-search.html
@@ -52,6 +52,10 @@
 
     <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
 
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -70,8 +74,8 @@
 
                     </a>
                     <div>
-                        <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button></a>
-                        <a href="#"><button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN IN</button></a>
+                        <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button>
+                        <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN IN</button>
                     </div>
                 </div>
             </nav>
@@ -140,43 +144,7 @@
                         <h3 class="h4 mb-5">전체 튜터를 확인해보세요.</h3>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-md-6 mb-3">
-                        <div class="card border-light mb-4 animate-up-5">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col-12 col-lg-6 col-xl-4">
-                                    <a href="#">
-                                        <img src="" alt="loft space" id="tutor-photo"
-                                             class="card-img p-2 rounded-xl">
-                                    </a>
-                                </div>
-                                <div class="col-12 col-lg-6 col-xl-7">
-                                    <div class="card-body">
-                                        <div class="mb-3">
-                                            <a href="#">
-                                                <span class="h5 mb-3 mr-6" id="tutor-name"></span>
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                                                     fill="#dc143c" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                                    <path fill-rule="evenodd"
-                                                          d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
-                                                </svg>
-                                                <span class="h6 mb-3" id="tutor-like"></span>
-                                            </a>
-                                        </div>
-                                        <div class="mb-5">
-                                            <span class="fas fa-map-marker-alt"></span>
-                                            <span id="tutor-nation"></span>
-                                        </div>
-                                        <div class="d-flex my-3">
-                                            <span class="badge badge-pill badge-primary ml-2" id="tutor-interest-1"></span>
-                                            <span class="badge badge-pill badge-primary ml-2" id="tutor-interest-2"></span>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row" id="tutor-card">
                 </div>
             </div>
         </section>
@@ -234,6 +202,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="/js/main-search.js"></script>
+    <script src="/js/move.js"></script>
 
     <!-- Core -->
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
